fixed my footer on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -532,8 +532,8 @@ textarea {
     background: white;
     padding: 3px;
     width: 100%;
-    max-width: 475px;
-    margin-top: 5px;
+    max-width: 470px;
+    margin-top: 4px;
     clear: both;
   }
   footer p a {
@@ -543,7 +543,7 @@ textarea {
     font-style: italic;
     font-weight: bold;
     text-align: center;
-    margin-left: 200px;
+    margin-left: 150px;
 }
   .menu {
     display: block;
